# android_system_bt

./: .clang-format  .gitignore  .style.yapf  Android.bp  Android.mk  AndroidTestTemplate.xml  BUILD.gn  Cargo.toml  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING  build.py  rustfmt.toml
bta/: Android.bp  Android.mk  BUILD.gn
bta/ag/: bta_ag_act.c  bta_ag_act.cc  bta_ag_api.cc  bta_ag_at.c  bta_ag_at.cc  bta_ag_at.h  bta_ag_cfg.cc  bta_ag_ci.cc  bta_ag_cmd.c  bta_ag_cmd.cc  bta_ag_int.h  bta_ag_main.c  bta_ag_main.cc  bta_ag_rfc.c  bta_ag_rfc.cc  bta_ag_sco.c  bta_ag_sco.cc  bta_ag_sdp.c  bta_ag_sdp.cc
bta/ar/: bta_ar.c  bta_ar.cc  bta_ar_int.h
bta/av/: bta_av_aact.c  bta_av_aact.cc  bta_av_act.c  bta_av_act.cc  bta_av_api.c  bta_av_api.cc  bta_av_cfg.c  bta_av_cfg.cc  bta_av_ci.cc  bta_av_int.h  bta_av_main.c  bta_av_main.cc  bta_av_ssm.c  bta_av_ssm.cc
bta/dm/: bta_dm_act.c  bta_dm_act.cc  bta_dm_api.c  bta_dm_api.cc  bta_dm_cfg.c  bta_dm_cfg.cc  bta_dm_ci.cc  bta_dm_int.h  bta_dm_main.c  bta_dm_main.cc  bta_dm_pm.c  bta_dm_pm.cc  bta_dm_sco.cc
bta/gatt/: bta_gattc_act.c  bta_gattc_act.cc  bta_gattc_api.cc  bta_gattc_cache.c  bta_gattc_cache.cc  bta_gattc_int.h  bta_gattc_main.cc  bta_gattc_queue.cc  bta_gattc_utils.c  bta_gattc_utils.cc  bta_gatts_act.cc  bta_gatts_api.cc  bta_gatts_int.h  bta_gatts_main.cc  bta_gatts_utils.cc  database.cc  database.h  database_builder.cc  database_builder.h
bta/hd/: bta_hd_act.c  bta_hd_act.cc  bta_hd_api.c  bta_hd_api.cc  bta_hd_int.h  bta_hd_main.c  bta_hd_main.cc
bta/hearing_aid/: hearing_aid.cc  hearing_aid_audio_source.cc
bta/hf_client/: bta_hf_client_act.c  bta_hf_client_act.cc  bta_hf_client_api.cc  bta_hf_client_at.c  bta_hf_client_at.cc  bta_hf_client_at.h  bta_hf_client_int.h  bta_hf_client_main.c  bta_hf_client_main.cc  bta_hf_client_rfc.c  bta_hf_client_rfc.cc  bta_hf_client_sco.cc  bta_hf_client_sdp.c  bta_hf_client_sdp.cc
bta/hh/: bta_hh_act.c  bta_hh_act.cc  bta_hh_api.cc  bta_hh_cfg.cc  bta_hh_int.h  bta_hh_le.c  bta_hh_le.cc  bta_hh_main.c  bta_hh_main.cc  bta_hh_utils.c  bta_hh_utils.cc
bta/hl/: bta_hl_act.cc  bta_hl_api.cc  bta_hl_int.h  bta_hl_main.c  bta_hl_main.cc  bta_hl_sdp.cc  bta_hl_utils.cc
bta/include/: bta_ag_api.h  bta_ag_ci.h  bta_ag_co.h  bta_api.h  bta_ar_api.h  bta_av_api.h  bta_av_ci.h  bta_av_co.h  bta_closure_api.h  bta_dm_acl.h  bta_dm_api.h  bta_dm_ci.h  bta_dm_co.h  bta_gatt_api.h  bta_gatt_queue.h  bta_gatts_co.h  bta_hd_api.h  bta_hearing_aid_api.h  bta_hf_client_api.h  bta_hfp_api.h  bta_hh_api.h  bta_hh_co.h  bta_hl_api.h  bta_jv_api.h  bta_jv_co.h  bta_mce_api.h  bta_op_api.h  bta_pan_api.h  bta_pan_ci.h  bta_pan_co.h  bta_sdp_api.h  bta_vc_api.h  utl.h
bta/jv/: bta_jv_act.c  bta_jv_act.cc  bta_jv_api.c  bta_jv_api.cc  bta_jv_cfg.cc  bta_jv_int.h  bta_jv_main.cc
bta/mce/: bta_mce_act.cc  bta_mce_api.cc  bta_mce_cfg.cc  bta_mce_int.h  bta_mce_main.cc
bta/pan/: bta_pan_act.c  bta_pan_act.cc  bta_pan_api.c  bta_pan_api.cc  bta_pan_ci.cc  bta_pan_int.h  bta_pan_main.c  bta_pan_main.cc
bta/pb/: bta_pbs_int.h
bta/sdp/: bta_sdp.cc  bta_sdp_act.cc  bta_sdp_api.cc  bta_sdp_cfg.cc  bta_sdp_int.h
bta/sys/: bta_sys.h  bta_sys_conn.cc  bta_sys_int.h  bta_sys_main.c  bta_sys_main.cc  utl.c  utl.cc
bta/test/: bta_dip_test.cc  bta_dm_cust_uuid_test.cc  bta_dm_test.cc  bta_gatt_test.cc  bta_hf_client_add_record_test.cc  bta_hf_client_test.cc  gatt_cache_file_test.cc
bta/vc/: device.cc  devices.h  devices_test.cc  types.h  vc.cc  vc_test.cc
btcore/: Android.bp  AndroidTest.xml  BUILD.gn
btcore/include/: bdaddr.h  hal_util.h  module.h  property.h
btcore/src/: bdaddr.cc  counter.c  device_class.c  device_class.cc  hal_util.cc  module.c  module.cc  property.cc
btcore/test/: bdaddr_test.cc  device_class_test.cc  device_class_test.cpp  property_test.cc
btif/: Android.bp  Android.mk  BUILD.gn
btif/avrcp/: avrcp_service.cc  avrcp_service.h
btif/co/: bta_ag_co.c  bta_ag_co.cc  bta_av_co.c  bta_av_co.cc  bta_dm_co.c  bta_dm_co.cc  bta_gatts_co.cc  bta_hh_co.c  bta_hh_co.cc  bta_pan_co.cc
common/: Android.bp  BUILD.gn  alarm.cc  alarm.h  alarm_unittest.cc  execution_barrier.cc  execution_barrier.h  execution_barrier_unittest.cc  handler.cc  handler.h  handler_unittest.cc  lru.h  lru_unittest.cc  message_loop_thread.cc  message_loop_thread.h  message_loop_thread_unittest.cc  metric_id_allocator.cc  metric_id_allocator.h  metric_id_allocator_unittest.cc  metrics.cc  metrics.h  metrics_linux.cc  os_utils.cc  os_utils.h  reactor.cc  reactor.h  reactor_unittest.cc  repeating_alarm.cc  repeating_alarm.h  repeating_alarm_unittest.cc  scoped_scs_exit.h  stop_watch_legacy.cc  stop_watch_legacy.h  thread.cc  thread.h  thread_unittest.cc  timer.cc  timer.h  timer_unittest.cc
device/: Android.bp  AndroidTest.xml  BUILD.gn
gd/: .clang-format  .gitignore  Android.bp  Android.mk  BUILD.gn  README.md  TEST_MAPPING  dumpsys_data.fbs  fuzz_test.cc  module.cc  module.h  module_unittest.cc  module_unittest.fbs  module_unittest_generated.h  setup.py  stack_manager.cc  stack_manager.h  stack_manager_unittest.cc
gd/cert/: irun  (+66 more)
hci/: Android.bp  Android.mk  AndroidTest.xml  BUILD.gn
main/: Android.bp  Android.mk  BUILD.gn  bte_conf.cc  bte_init.c  bte_init.cc  bte_init_cpp_logging.cc  bte_logmsg.c  bte_logmsg.cc  bte_main.c  bte_main.cc  stack_config.c  stack_config.cc
packet/: Android.bp  BUILD.gn
service/: Android.bp  AndroidTest.xml  BUILD.gn  adapter.cc  adapter.h  avrcp_control.cc  avrcp_target.cc  bluetooth_instance.h  daemon.cc  daemon.h  gatt_client.cc  gatt_client.h  gatt_server.cc  gatt_server.cpp  gatt_server.h  gatt_server_old.cc  gatt_server_old.h  logging_helpers.cc  logging_helpers.h  low_energy_advertiser.cc  low_energy_advertiser.h  low_energy_client.cc  low_energy_client.cpp  low_energy_client.h  low_energy_scanner.cc  low_energy_scanner.h  main.cc  settings.cc  settings.h  switches.h
stack/: Android.bp  Android.mk  BUILD.gn
types/: Android.bp  Android.mk  BUILD.gn  ble_address_with_type.h  bt_transport.h  class_of_device.h  hci_role.h  raw_address.cc  raw_address.h
(+2644 files in other folders)
