#
#  Copyright 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

static_library("device") {
  sources = [
    "src/controller.cc",
    "src/esco_parameters.cc",
    "src/interop.cc",
  ]

  include_dirs = [
    "//bt/",
    "//bt/btcore/include",
    "//bt/hci/include",
    "//bt/internal_include",
    "//bt/stack/include",
  ]

  configs += [
    "//bt:target_defaults",
  ]

  deps = [
    "//bt/gd/rust/shim:init_flags_bridge_header",
    "//bt/gd/rust/shim:message_loop_thread_bridge_header",
  ]
}

if (use.test) {
  executable("net_test_device") {
    sources = [
      "//bt/osi/test/AllocationTestHarness.cc",
    ]

    include_dirs = [ "//bt" ]

    deps = [
      "//bt/device",
      "//bt/btcore",
      "//bt/osi",
    ]

    configs += [
      "//bt:external_gtest_main",
      "//bt:target_defaults",
    ]

    libs = [
      "pthread",
      "rt",
      "dl",
    ]
  }
}
