#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

import("//common-mk/flatbuffer.gni")

config("dumpsys_config") {
  include_dirs = [
    "$target_gen_dir",
    "$target_gen_dir/common",
    "$target_gen_dir/hci",
    "$target_gen_dir/l2cap/classic",
    "$target_gen_dir/shim",
  ]
}

flatbuffer("dumpsys") {
  sources = [
    "common/init_flags.fbs",
    "dumpsys_data.fbs",
    "hci/hci_acl_manager.fbs",
    "l2cap/classic/l2cap_classic_module.fbs",
    "shim/dumpsys.fbs",
  ]

  all_dependent_configs = [ ":dumpsys_config" ]
}
